# iamdreamingof-generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ai.py  cdn.py  concepts.json  create_seed_csv.py  deploy.sh  fly.toml  gerunds.json  image.py  main.py  models.py  objects.json  pyproject.toml  requirements.txt  ruff.toml  words.csv  words.py
.cargo/: config.toml
.github/workflows/: deploy.yml  docker-image.yml
.zed/: settings.json
data/: concepts.json  gerunds.json  objects.json
data/prompts/: chat_system.txt  chat_user.txt  image_enhancement.txt  qa_system.txt  qa_user.txt
k8s/: cronjob.yaml
src/: app.rs  error.rs  lib.rs  main.rs  models.rs  prompts.rs  semantic.rs  words.rs
src/ai/: client.rs  mime.rs  mock.rs  mod.rs
src/ai/gemini/: chat.rs  client.rs  embedding.rs  image.rs  mod.rs  qa.rs  types.rs
src/ai/openai/: chat.rs  client.rs  embedding.rs  image.rs  mod.rs  qa.rs  types.rs
src/cdn/: client.rs  mock.rs  mod.rs
src/image/: mock.rs  mod.rs  processor.rs
tests/: integration.rs
