[package]
name = "iamdreamingof-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# AWS SDK for S3 (DigitalOcean Spaces compatible)
aws-config = "1.5"
aws-sdk-s3 = "1.62"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Image processing
image = "0.25"

# Retry logic
tokio-retry = "0.3"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation
rand = "0.8"

# Async trait
async-trait = "0.1"

# Base64 encoding (for image data)
base64 = "0.22"

# Temporary files
tempfile = "3.14"
little_exif = "0.6.23"

[dev-dependencies]
# Testing
mockito = "1.6"
wiremock = "0.6"
tokio-test = "0.4"
pretty_assertions = "1.4"
