[tool.poetry]
name = "iamdreamingof-generator"
version = "0.1.0"
description = "Generator for iamdreamingof.com"
authors = ["Tim Hahn <hi@tmhhn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"
requests = "^2.32.0"
boto3 = "^1.34.44"
wand = "^0.6.13"
tenacity = "^8.2.3"
rollbar = "^1.0.0"
logtail-python = "^0.2.10"
honeybadger = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
