[project]
name = "iamdreamingof-generator"
version = "0.1.0"
description = "Generator for iamdreamingof.com"
authors = [{name = "Tim Hahn", email = "hi@tmhhn.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.1",
    "requests>=2.31.0",
    "boto3>=1.34.44",
    "wand>=0.6.13",
    "tenacity>=8.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.9",
    "types-requests>=2.32.4.20250809",
    "boto3-stubs>=1.40.14",
    "basedpyright>=1.31.6",
]
